--- a/src/general/layout.scss
+++ b/src/general/layout.scss
@@ -2,6 +2,11 @@ html, body {
     padding: 0;
     margin: 0;
 }
+body {
+    background: #efefef;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333;
+}
 *{
     box-sizing: border-box;
 }
@@ -13,6 +18,8 @@ html, body {
 .header {
     
     padding: 10px 0; 
+    box-shadow: 0 0 4px rgba(0,0,0,.3);
+    background: #fff;
     &__inner {
         display: flex;
         align-items: center;
