--- a/src/general/layout.scss
+++ b/src/general/layout.scss
@@ -13,7 +13,8 @@ body {
 
 .container {
     padding: 0 20px;
-    max-width: 1200px;
+    max-width: 1050px;
+    margin: 0 auto;
 }
 .header {
     
