Added animation for navigation

--- a/src/components/navigation/hamburger.scss
+++ b/src/components/navigation/hamburger.scss
@@ -16,6 +16,7 @@
     color: inherit;
     border: 0;
     background-color: transparent;
+    padding: 7px;
 
     &__box {
         position: relative;
