--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -1,3 +1,5 @@
+@import '~settings';
+
 .navigation {
     $this: &;
 
@@ -13,6 +15,22 @@
         transition: transform .3s cubic-bezier(.17,.67,.63,1.39);
         background: #fff;
         box-shadow: -3px 0px 5px -2px rgba(0,0,0,0.5);
+        z-index: 10;
+    }
+
+    &__link {
+        display: block;
+        font-size: 18px;
+        color: $blue;
+        text-decoration: none;
+        padding: 15px 0;
+        text-align: center;
+        &:hover, &:focus {
+            color: darken($blue, 20%);
+            text-decoration: underline;
+        }
+
+
     }
 
     &.is-opened {
