--- a/src/general/layout.scss
+++ b/src/general/layout.scss
@@ -1,15 +1,23 @@
+@import '~settings';
+
+*{
+    box-sizing: border-box;
+}
+
 html, body {
     padding: 0;
     margin: 0;
+    height: 100%;
 }
 body {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    flex-direction: column;
     background: #efefef;
     font-family: Arial, Helvetica, sans-serif;
     color: #333;
 }
-*{
-    box-sizing: border-box;
-}
+
 
 .container {
     padding: 0 20px;
@@ -30,4 +38,10 @@ body {
         align-items: center;
         justify-content: space-between;
     }
+}
+
+.main {
+    display: flex;
+    align-items: center;
+    
 }
