--- a/src/components/quote/quote.scss
+++ b/src/components/quote/quote.scss
@@ -4,6 +4,8 @@
     max-width: 700px;
     padding: 10px 50px 30px;
     margin: 0 auto;
+    opacity: 0;
+    transition: opacity 0.5s;
 
     @include breakpoint(tablet) {
         padding: 10px 80px 50px;
@@ -42,5 +44,9 @@
     &__author {
         font-size: 18px;
         font-style: italic;
+    }
+
+    &.is-visible {
+        opacity: 1;
     }
 }
